Cert Manager installed by static manifest

--- a/roles/k3s-kubernetes/vars/cert_manager.yml
+++ b/roles/k3s-kubernetes/vars/cert_manager.yml
@@ -7,4 +7,6 @@ cert_manager:
   # Name space to be created for Cert Manager installation
   namespace: "cert-manager"
 
-  helm_chart_url: "https://charts.jetstack.io"
+  # helm_chart_url: "https://charts.jetstack.io"
+
+  install_url: "https://github.com/jetstack/cert-manager/releases/download/{{install.cert_manager.install_version}}/cert-manager.crds.yaml"
