--- a/roles/k3s-kubernetes/tasks/05_install_cert_manager.yml
+++ b/roles/k3s-kubernetes/tasks/05_install_cert_manager.yml
@@ -8,17 +8,33 @@
 - name: Install Cert Manager to Kubernetes Block
   block:
 
-  - name: Install Cert Manager from Helm Chart
-    kubernetes.core.helm:
-      name: cert-manager
-      create_namespace: yes
-      release_namespace: "{{cert_manager.namespace}}"
-      release_state: present
-      chart_ref: "cert-manager"
-      chart_repo_url: "{{cert_manager.helm_chart_url}}"
-      chart_version: "{{install.cert_manager.install_version}}"
-      wait: yes
-      wait_timeout: 5m
+#  - name: Install Cert Manager from Helm Chart
+#    kubernetes.core.helm:
+#      name: cert-manager
+#      create_namespace: yes
+#      release_namespace: "{{cert_manager.namespace}}"
+#      release_state: present
+#      chart_ref: "cert-manager"
+#      chart_repo_url: "{{cert_manager.helm_chart_url}}"
+#      chart_version: "{{install.cert_manager.install_version}}"
+#      skip_crds: no
+#      wait: yes     # time out waiting on job/cert-manager-startupapicheck to complete
+#      wait_timeout: 5m
+
+# CRDs were not being created using Helm
+# $ kubectl describe crd clusterissuers.cert-manager.io
+# Error from server (NotFound): customresourcedefinitions.apiextensions.k8s.io "clusterissuers.cert-manager.io" not found
+
+  - name: Fetch Static Manifest to Install Cert Manager
+    ansible.builtin.get_url:
+      url: "{{cert_manager.install_url}}"
+      dest: "/home/{{install.os.non_root_user.name}}/cert-manager-{{install.cert_manager.install_version}}-manifest.yaml"
+      mode: '0664'
+
+  - name: Install Cert manager via static Manifest
+    kubernetes.core.k8s:
+     state: present
+     src: "/home/{{install.os.non_root_user.name}}/cert-manager-{{install.cert_manager.install_version}}-manifest.yaml"
 
   tags:
     - install_cert_manager
