Changed where ZFS Dataset UUID is captured

--- a/roles/k3s-kubernetes/tasks/02_install_containerd.yml
+++ b/roles/k3s-kubernetes/tasks/02_install_containerd.yml
@@ -1,12 +1,7 @@
 ---
-# Detect ZFS UUID from ZFS on Root installations if enabled
+# Detect ZFS UUID from ZFS on Root installations
 - name: Detect ZFS Dataset UUID Block
   block:
-  - name: Detect ZFS Dataset UUID
-    shell:
-      cmd: "{{containerd.zfs.zfs_uuid_detect_cmd}}"
-    register: UUID
-
   - name: Fail if UUID not detected
     fail:
       msg: |
