--- a/roles/k3s-kubernetes/tasks/06_config_traefik_dns_certs.yml
+++ b/roles/k3s-kubernetes/tasks/06_config_traefik_dns_certs.yml
@@ -26,13 +26,12 @@
      mode: '0660'
     loop:
       - cloudflare_api_token_secret.yaml
-      - letsencrypt_staging_wildcard_cert.yaml
-      - letsencrypt_staging.yaml
+      - letsencrypt_wildcard_cert.yaml
+      - letsencrypt.yaml
       - traefik_default_tls_store.yaml
-      - letsencrypt_prod.yaml
-      - letsencrypt_prod_wildcard_cert.yaml
+      - traefik_test_apps.yaml
 
-  - name: Apply Traefik Staging Certificate
+  - name: Apply Traefik Certificate
     kubernetes.core.k8s:
      state: present
      src: "/home/{{install.os.non_root_user.name}}/traefik/{{item}}"
@@ -40,11 +39,9 @@
      wait_timeout: 300
     with_items:
       - cloudflare_api_token_secret.yaml
-      - letsencrypt_staging_wildcard_cert.yaml
-      - letsencrypt_staging.yaml
+      - letsencrypt_wildcard_cert.yaml
+      - letsencrypt.yaml
       - traefik_default_tls_store.yaml
-    when:
-      - k3s.traefik.staging|default(false)|bool == true
 
   tags:
    - config_traefik_dns_certs
