--- a/roles/k3s-kubernetes/tasks/main.yml
+++ b/roles/k3s-kubernetes/tasks/main.yml
@@ -8,6 +8,14 @@
 # is configured to support ZFS.  Then k3s configuration will be updated to use containerd.
 # Based on: https://blog.nobugware.com/post/2019/k3s-containterd-zfs/
 
+###[ Load up the secret files ]####################################################################
+- name: Include Secret Files
+  include_vars: "{{ item }}"
+  tags: ["always"]
+  loop:
+    - secrets/k3s_traefik_api_secrets.yml
+    - secrets/truenas_api_secrets.yml
+  no_log: "{{no_log_secrets|default(true)}}"
 
 ###[ Load up the variable files ]##################################################################
 - name: Include Var Files
@@ -18,18 +26,7 @@
       - containerd.yml
       - helm.yml
       - cert_manager.yml
-
-###[ Load up the secret files ]####################################################################
-- name: Include Secret Files
-  include_vars: "{{ lookup('first_found',params) }}"
-  vars:
-    params:
-      files:
-        - k3s_traefik_api_secrets.yml
-      paths: "defaults"
-  tags: ["always"]
-  no_log: "{{install.no_log|default(true)}}"
-  
+      - democratic-csi.yml
 
 ###[ Detect ZFS UUID from ZFS on Root installations ]##############################################
 - name: Detect ZFS Dataset UUID
@@ -52,13 +49,13 @@
     slurp:
       path: "{{k3s.node_token_path}}"
     register: node_token_output
-    no_log: "{{install.no_log|default(true)}}"
+    no_log: "{{no_log_secrets|default(true)}}"
     when: node_token_file.stat.exists == true
 
   - name: Clean and add node_token to facts
     set_fact:
       node_token: "{{ node_token_output.content | b64decode | regex_replace('\n', '')}}"
-    no_log: "{{install.no_log|default(true)}}"
+    no_log: "{{no_log_secrets|default(true)}}"
     when: node_token_file.stat.exists == true
   tags: ["always"]
 ###################################################################################################
