Documented Democratic CSI iSCSI settings

--- a/roles/k3s-kubernetes/defaults/main.yml
+++ b/roles/k3s-kubernetes/defaults/main.yml
@@ -101,7 +101,7 @@ install:
     iscsi:
       provisioner: "freenas-iscsi"
       namespace: "democratic-csi"
-      release: "zfs-iscsi"
+      release: "truenas-iscsi"
 
       packages:
         - open-iscsi
