Initial democratic iscsi validation

--- a/roles/k3s-kubernetes/tasks/main.yml
+++ b/roles/k3s-kubernetes/tasks/main.yml
@@ -71,6 +71,7 @@
     - 05_install_cert_manager.yml
     - 06_config_traefik_dns_certs.yml
     - 07_install_democratic_csi.yml
+    - 08_validate_csi_iscsi.yml
 
   loop_control:
     loop_var: task_names
